src/webview_sys.rs

/* automatically generated by rust-bindgen 0.57.0 */

pub const WEBVIEW_HINT_NONE: u32 = 0;
pub const WEBVIEW_HINT_MIN: u32 = 1;
pub const WEBVIEW_HINT_MAX: u32 = 2;
pub const WEBVIEW_HINT_FIXED: u32 = 3;
pub type webview_t = *mut ::std::os::raw::c_void;
extern "C" {
    pub fn webview_create(
        debug: ::std::os::raw::c_int,
        window: *mut ::std::os::raw::c_void,
    ) -> webview_t;
}
extern "C" {
    pub fn webview_destroy(w: webview_t);
}
extern "C" {
    pub fn webview_run(w: webview_t);
}
extern "C" {
    pub fn webview_terminate(w: webview_t);
}
extern "C" {
    pub fn webview_dispatch(
        w: webview_t,
        fn_: ::std::option::Option<
            unsafe extern "C" fn(w: webview_t, arg: *mut ::std::os::raw::c_void),
        >,
        arg: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn webview_get_window(w: webview_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn webview_set_title(w: webview_t, title: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn webview_set_size(
        w: webview_t,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        hints: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn webview_navigate(w: webview_t, url: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn webview_init(w: webview_t, js: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn webview_eval(w: webview_t, js: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn webview_bind(
        w: webview_t,
        name: *const ::std::os::raw::c_char,
        fn_: ::std::option::Option<
            unsafe extern "C" fn(
                seq: *const ::std::os::raw::c_char,
                req: *const ::std::os::raw::c_char,
                arg: *mut ::std::os::raw::c_void,
            ),
        >,
        arg: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn webview_return(
        w: webview_t,
        seq: *const ::std::os::raw::c_char,
        status: ::std::os::raw::c_int,
        result: *const ::std::os::raw::c_char,
    );
}
